# memequeue

./: Cargo.toml  README.md
benchmarks/common/: Cargo.toml
benchmarks/common/src/: framing.rs  lib.rs
benchmarks/postcard-objects/: Cargo.toml
benchmarks/postcard-objects/src/: args.rs  lib.rs  model.rs
benchmarks/random_bytes/: Cargo.toml
benchmarks/random_bytes/src/: args.rs  lib.rs
examples/: recv_seq.rs  send_seq.rs
src/: flock.rs  handshake.rs  lib.rs  main.rs  mmap.rs  shmem_mutex.rs  stats.rs
src/control/: eventfd.rs  mod.rs  shmem_futex.rs
src/handshake/: named_file.rs  uds_memfd.rs
tests/: property.rs  spsc_multithread.rs
