[package]
name = "postcard-objects-bench"
version = "0.1.0"
edition = "2021"

[features]
stats = ["memequeue/stats"]

[profile.release]
codegen-units = 1
lto = "fat"

[[bin]]
name = "meme"

[[bin]]
name = "uds_tokio_framed"

[[bin]]
name = "uds_std_buf"

[dependencies]
memequeue = { version = "0.1.0", path = "../.." }
benchmarks_common = { version = "0.1.0", path = "../common" }

clap = { version = "4.4.7", features = ["derive"] }
futures = "0.3.29"
postcard = { version = "1.0.8", features = ["use-crc", "use-std"] }
quanta = "0.12.0"
rand = { version = "0.8.5", default-features = false, features = ["std"] }
rand_xorshift = "0.3.0"
serde = { version = "1.0.190", features = ["derive"] }
smallvec = { version = "1.11.1", features = ["serde"] }


# Patched tokio time!
# Stock tokio forces an extra allocation when sending length-prefixed messages,
# and we want to be fair, so we patch it.
# See: https://github.com/tokio-rs/tokio/issues/6116
[dependencies.tokio]
git = "https://github.com/GoldsteinE/tokio.git"
branch = "length-delimited-borrowed"
features = ["rt", "rt-multi-thread", "macros", "net"]

[dependencies.tokio-util]
git = "https://github.com/GoldsteinE/tokio.git"
branch = "length-delimited-borrowed"
features = ["codec"]
